--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.12",
         "cross-env": "^7.0",
         "gulp": "^4.0.2",
@@ -20,12 +21,16 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rigger": "^0.5.8",
         "gulp-sass": "^4.1.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "node-sass": "^4.14.1",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {}
+    "dependencies": []
 }
